[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "langchain==1.0.2",
    "langchain-ollama>=1.0.0",
    "pre-commit>=4.5.0",
    "pydocstyle>=6.3.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.8",
]
